# cliffhangers_ws

./: README.md  esp32_motor_drive  mazemap_save.pgm  mazemap_save.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/cl3/: .setup_assistant  CMakeLists.txt  package.xml
src/cl4/: .setup_assistant  CMakeLists.txt  package.xml
src/cl5/: .setup_assistant  CMakeLists.txt  package.xml
src/climbbot3_description/: CMakeLists.txt  old_robot.urdf  package.xml
src/climbbot3_gz/: CMakeLists.txt  package.xml
src/climbbot3_moveit/: CMakeLists.txt
src/climbbot3_moveit/config/: climbbot3.ros2_control.xacro  climbbot3.srdf  climbbot3.urdf.xacro  gazebo_sim_ros2_control.urdf.xacro  gz_controllers.yaml  initial_positions.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  rsp.rviz
src/climbbot3_moveit/launch/: demo.launch.py  gazebo.launch.py  gazebo2.launch.py  move_group.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
src/climbbot3_moveit/scripts/: climb.py  fake_camera_link.py  fake_points.py  gz_odom_tf.py  old.py  original_real_climb.py  real_climb.py  simple_climb.py
src/climbing_robot1_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/climbing_robot2/: CMakeLists.txt  package.xml
src/climbing_robot2_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/climbing_robot_3_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/esp_comms/: setup.cfg  setup.py
src/junk/: .setup_assistant  CMakeLists.txt  package.xml
(+251 files in other folders)
